--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="left_side">
         <div class="profileText">
           <div class="imgBox">
-            <img src="man without love.png" alt="" />
+            <img src="images/man without love.png" alt="" />
           </div>
           <h2>
             Francis Oliver D. Hiloma <br />
